@@ -36,6 +36,10 @@ function format_customer_account($contact) {
 	return format_bankaccount($contact);
 }
 
+function format_customer_url($contact) {
+	return '<a href="' . $contact . '">' . $contact . '</a>';
+}
+
 function validate_customer_phones(&$customerdata, &$contacts, &$error) {
 	foreach ($customerdata['phones'] as $idx => &$val) {
 		$phone = trim($val['contact']);
@@ -92,7 +96,23 @@ function validate_customer_accounts(&$customerdata, &$contacts, &$error) {
 	}
 }
 
-global $CUSTOMERCONTACTTYPES;
+function validate_customer_urls(&$customerdata, &$contacts, &$error) {
+	foreach ($customerdata['urls'] as $idx => &$val) {
+		$url = trim($val['contact']);
+		$name = trim($val['name']);
+		$type = !empty($val['type']) ? array_sum($val['type']) : NULL;
+		$type |= CONTACT_URL;
+
+		$val['type'] = $type;
+
+		if ($url != '' && !check_url($url))
+			$error['url' . $idx] = trans('Incorrect URL address!');
+		elseif ($name && !$url)
+			$error['url' . $idx] = trans('URL address is required!');
+		elseif ($url)
+			$contacts[] = array('name' => $name, 'contact' => $url, 'type' => $type);
+	}
+}
 
 $CUSTOMERCONTACTTYPES = array(
 	'phone' => array(
@@ -121,6 +141,7 @@ $CUSTOMERCONTACTTYPES = array(
 				),
 			),
 		),
+		'flagmask' => CONTACT_MOBILE | CONTACT_FAX | CONTACT_LANDLINE,
 		'formatter' => 'format_customer_phone',
 		'validator' => 'validate_customer_phones',
 	),
@@ -152,6 +173,7 @@ $CUSTOMERCONTACTTYPES = array(
 				),
 			),
 		),
+		'flagmask' => CONTACT_EMAIL,
 		'formatter' => 'format_customer_email',
 		'validator' => 'validate_customer_emails',
 	),
@@ -175,8 +197,29 @@ $CUSTOMERCONTACTTYPES = array(
 				),
 			),
 		),
+		'flagmask' => CONTACT_BANKACCOUNT,
 		'formatter' => 'format_customer_account',
 		'validator' => 'validate_customer_accounts',
+	),
+	'url' => array(
+		'ui' => array(
+			'legend' => array(
+				'icon' => 'img/network.gif',
+				'text' => trans('URL addresses'),
+			),
+			'inputtype' => 'text',
+			'size' => 50,
+			'tip' => trans('Enter URL address (optional)'),
+			'flags' => array(
+				CONTACT_DISABLED => array(
+					'label' => $CONTACTTYPES[CONTACT_DISABLED],
+					'tip' => trans('Check if URL address should be disabled'),
+				),
+			),
+		),
+		'flagmask' => CONTACT_URL,
+		'formatter' => 'format_customer_url',
+		'validator' => 'validate_customer_urls',
 	),
 );
 
