@@ -325,6 +325,7 @@ define('CONTACT_INVOICES', 16);
 define('CONTACT_NOTIFICATIONS', 32);
 define('CONTACT_BANKACCOUNT', 64);
 define('CONTACT_TECHNICAL', 128);
+define('CONTACT_URL', 256);
 define('CONTACT_DISABLED', 16384);
 
 $CONTACTTYPES = array(
